# hryshchenko-blog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-cmd.sh  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pre-commit.yml
frontend/: .prettierrc  components.json  eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/app/: main.js
frontend/src/app/router/: index.js
frontend/src/app/views/: HomeView.vue
frontend/src/assets/styles/: home.css  style.css
frontend/src/components/ui/button/: Button.vue  index.js
frontend/src/entries/: home.js  main.js  post-feed.js  rss-link.js  theme-toggle.js
frontend/src/islands/: PostFeed.vue  RssLink.vue  ThemeToggle.vue
website/: pytest.sh
website/apps/blog/: factories.py  feeds.py  models.py  paginator.py  urls.py
website/apps/blog/management/commands/: load_fake_posts.py
website/apps/blog/migrations/: 0001_initial.py  0002_alter_blogpostpage_body.py  0003_alter_blogpostpage_body.py  0004_alter_blogpostpage_body.py  0005_blogpostpage_search_image.py
website/apps/blog/services/: __init__.py  post_service.py
website/apps/blog/templates/blog/: blog_post_page.html
website/apps/blog/templates/blog/includes/: post_list.html
website/apps/cms/: contexts.py  models.py
website/apps/cms/management/commands/: load_cms_pages.py
website/apps/cms/migrations/: 0001_initial.py  0002_homepage_body_homepage_picture.py  0003_homepage_name.py  0004_sitesettings_sitelink.py  0005_homepage_search_image.py
website/apps/cms/templates/: base.html
website/apps/cms/templates/cms/: base.html  home_page.html
website/apps/core/: middleware.py
website/apps/core/api/: urls.py  views.py
website/apps/core/tests/: test_django_mode.py
website/apps/polls/: urls.py  views.py
website/apps/polls/templates/polls/: app.html
website/templates/: base.html
website/templates/admin/: base_site.html
website/templates/django_social_share/templatetags/: post_to_linkedin.html
website/website/: api.py  urls.py
website/website/settings/: __init__.py
website/website/settings/components/: base.py  cache.py  database.py  email.py  logging.py  security.py  vite.py  wagtail.py
website/website/settings/environments/: __init__.py  development.py  production.py  test.py
